kustomize/base/kubedb-webhook-server/templates/provisioner/mutating-webhook.yaml
---
# Source: kubedb/charts/kubedb-webhook-server/templates/provisioner/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-provisioner
    helm.sh/chart: kubedb-webhook-server-v0.27.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/version: "v0.27.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: elasticsearchwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-elasticsearch
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["elasticsearches"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: postgreswebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-postgres
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["postgreses"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  matchPolicy: Equivalent
  sideEffects: None
- name: mysqlwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-mysql
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["mysqls"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: mongodbwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-mongodb
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["mongodbs"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: rediswebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-redis
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["redises"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: redissentinelwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-redissentinel
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
    - apiGroups: ["kubedb.com"]
      apiVersions: ["v1"]
      resources: ["redissentinels"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: mariadbwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: kubedb
      name: kubedb-kubedb-webhook-server
      path: /mutate-kubedb-com-v1-mariadb
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lSQUpsSEZuZTVRMmFyaFFneldUaXV4M3d3RFFZSktvWklodmNOQVFFTEJRQXcKRFRFTE1Ba0dBMVVFQXhNQ1kyRXdIaGNOTWpVd01qQTBNVEV3TURNMldoY05NelV3TWpBeU1URXdNRE0yV2pBTgpNUXN3Q1FZRFZRUURFd0pqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUhMClNKRGdaR1NYSWMxVjgraDlNeTZDWG42Y2dwT0MrZ3dMeS84b1R4NEM1TllIb0YvOG5jRjBUKzh0ZVFmVnJoVk0KcnhCckdXbGdiVUo0TzE1UTVNNUw2bGNBZHJlWm9ld1FncGVmcndMOHJ6dlF4S3lzM2VJTW1kOHhsMis0bWNOQQoxS1dXTi9FeEVsZF [...]
  rules:
  - apiGroups: ["kubedb.com"]
    apiVersions: ["v1"]
    resources: ["mariadbs"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: kafkawebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kubedb.com/v1alpha1/kafkawebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kubedb.com" ]
      apiVersions: [ "v1" ]
      resources: [ "kafkas" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
- name: connectclusterwebhook.mutators.kafka.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kafka.kubedb.com/v1alpha1/connectclusterwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kafka.kubedb.com" ]
      apiVersions: [ "*" ]
      resources: [ "connectclusters" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
- name: connectorwebhook.mutators.kafka.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kafka.kubedb.com/v1alpha1/connectorwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kafka.kubedb.com" ]
      apiVersions: [ "*" ]
      resources: [ "connectors" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
- name: restproxywebhook.mutators.kafka.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kafka.kubedb.com/v1alpha1/restproxywebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kafka.kubedb.com" ]
      apiVersions: [ "*" ]
      resources: [ "restproxies" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
- name: schemaregistrywebhook.mutators.kafka.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kafka.kubedb.com/v1alpha1/schemaregistrywebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kafka.kubedb.com" ]
      apiVersions: [ "*" ]
      resources: [ "schemaregistries" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
- name: rabbitmqwebhook.mutators.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.kubedb.com/v1alpha1/rabbitmqwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: [ "kubedb.com" ]
      apiVersions: [ "*" ]
      resources: [ "rabbitmqs" ]
      operations: [ "CREATE", "UPDATE" ]
  admissionReviewVersions: [ "v1beta1" ]
  failurePolicy: Ignore
  sideEffects: None
